Add compressors into common